<resources>
    <string name="app_name">OpenEye</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search">帮你找到感兴趣的视频</string>
    <string name="tip_search">请输入搜索关键字</string>
    <string name="history">观看记录</string>
    <string name="collect">我的收藏</string>
    <string name="clearcache">清除缓存</string>
    <string name="version">版本号</string>


    <string-array name="weekday">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="hot">
        <item>周排行</item>
        <item>月排行</item>
        <item>总排行</item>
    </string-array>
</resources>
