<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MineFragment">

    <RelativeLayout
        android:id="@+id/mine_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/mine_icon_bg"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_launcher"

            />

        <ImageView
            android:id="@+id/mine_icon_round"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/mine_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/app_name"
            android:textColor="@color/White"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@id/mine_icon_bg"
            android:layout_marginBottom="20dp"
            android:textStyle="italic"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/mine_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mine_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/history"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/mine_collect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mine_history"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/collect"
        android:textSize="16sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/mine_clearcache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mine_collect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/clearcache"
        android:textSize="16sp"
        android:textStyle="bold"

        />
    <TextView
        android:id="@+id/mine_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mine_clearcache"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/version"
        android:textSize="16sp"
        android:textStyle="bold"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>